--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,5 +1,6 @@
 FROM quay.io/costoolkit/releases-green:luet-toolchain-0.21.2 as luet
 FROM quay.io/costoolkit/releases-green:luet-makeiso-toolchain-0.4.0 as makeiso
+FROM quay.io/costoolkit/elemental-cli:v0.2.2 as elemental
 
 FROM golang:1.18.3-buster
 
@@ -34,6 +35,7 @@ RUN apt-get update -qq && apt-get install -y --no-install-recommends \
         ca-certificates \
         curl \
         gnupg \
+        rsync \
     && rm -rf /var/lib/apt/lists/*; \
     \
     curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - >/dev/null; \
@@ -66,6 +68,7 @@ RUN curl -Lo /usr/bin/codecov https://uploader.codecov.io/latest/linux/codecov &
 # luet & makeiso
 COPY --from=luet /usr/bin/luet /usr/bin/luet
 COPY --from=makeiso /usr/bin/luet-makeiso /usr/bin/luet-makeiso
+COPY --from=elemental /usr/bin/elemental /usr/bin/elemental
 
 # -- for make rules
 
